--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ database/config/config.js
 database/config/config.js
 database/config/config.js
 database/config/config.js
+database/config/config.js
+
